# Patronus

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  EVAL  README.md  TODO  boostrap.sh  check.sh  cleanup.sh  deploy.txt  hugepage.sh  memcached.conf
BTree/: Makefile  btree_concurrent  btree_concurrent_mixed
BTree/FAST_FAIR/concurrent/: btree_concurrent
BTree/src/: btree.cpp  btree.h  page.h  test.cpp
bench/: bench_allocator.cpp  bench_bind_mw_pcie.cpp  bench_chrono.cpp  bench_clone.cpp  bench_coro.cpp  bench_cpu.cpp  bench_cqueue_rdma.cpp  bench_cqueue_rdma_tp.cpp  bench_ddl_manager.cpp  bench_keeper_put_get_barrier.cpp  bench_kv_rand.cpp  bench_list_rdma.cpp  bench_mr_qp_break_down.cpp  bench_mw.cpp  bench_mw_post_send.cpp  bench_mw_rw.cpp  bench_patronus_alloc.cpp  bench_patronus_basic.cpp  bench_patronus_basic_lease_expire.cpp  bench_patronus_basic_single_thread.cpp  bench_patronus_concurrent.cpp  bench_patronus_extend.cpp  bench_patronus_fast_recovery.cpp  bench_patronus_lease_lock_accuracy.cpp  bench_patronus_mn_cores.cpp  bench_patronus_mw_reducing.cpp  bench_patronus_mw_reducing_lease.cpp  bench_patronus_mw_reducing_lease2.cpp  bench_patronus_pcie.cpp  bench_patronus_sql.cpp  bench_pool.cpp  bench_prot_lat.cpp  bench_query_qp.cpp  bench_race_rdma.cpp  bench_race_rdma_bootstrap.cpp  bench_race_rdma_expand_fault_tolerance.cpp  bench_race_rdma_lat.cpp  bench_race_rdma_mortgage.cpp  bench_race_rdma_op.cpp  bench_race_rdma_single_thread_tp.cpp  (+11 more)
include/: AbstractMessageConnection.h  Bitmap.h  Cache.h  CacheEntry.h  ClockManager.h  Common.h  Config.h  Connection.h  CoroContext.h  DSM.h  DSMKeeper.h  Debug.h  Directory.h  DirectoryConnection.h  GlobalAddress.h  GlobalAllocator.h  HotBuffer.h  HugePageAlloc.h  IndexCache.h  Keeper.h  LocalAllocator.h  LocalLockQueue.h  Page.h  PerThread.h  Pool.h  RawMessageConnection.h  Rdma.h  RdmaBuffer.h  ReliableMessageConnection.h  ReliableReceiver.h  ReliableSender.h  SimpleHT.h  Statistics.h  ThreadConnection.h  Timer.h  Tree.h  Util.h  ValidityMutex.h  WRID.h  WRLock.h  (+5 more)
include/FastMemcpy/: FastMemcpy.h  FastMemcpy_Avx.h
include/bench/: coro_manager.h  manager.h
include/patronus/: All.h  Batch.h  Config.h  Coro.h  DDLManager.h  IBOut.h  Lease.h  LeaseCache.h  LeaseContext.h  LockManager.h  Patronus.h  ProtectionRegion.h  RdmaAdaptor.h  Result.h  Time.h  TimeSyncer.h  Type.h  bench_manager.h
include/patronus/memory/: allocator.h  block_allocator.h  direct_allocator.h  mr_allocator.h  mw_allocator.h  ngx_allocator.h  nothing_allocator.h  patronus_wrapper_allocator.h  slab_allocator.h
include/umsg/: Config.h  UnreliableConnection.h  UnreliableMessageConnection.h  UnreliableReceiver.h  UnreliableSender.h
include/util/: BenchRand.h  Coro.h  DataFrameF.h  Debug.h  Hexdump.hpp  IRdmaAdaptor.h  Literals.h  PerformanceReporter.h  Pre.h  Rand.h  RetCode.h  TimeConv.h  Tracer.h  Type.h  Util.h  ZipRand.h  monitor.h  stacktrace.h  zipf.h
script/: README.md  bench.py  bench.sh  benchmark.sh  bootstrap.py  bootstrap.sh  build_debug.py  build_debug.sh  build_release.py  build_release.sh  clean_results.sh  cleanup.py  cleanup.sh  cluster.py  config.py  coredump.py  correct.sh  env.sh  fetch.sh  fetch_log.py  fetch_log.sh  fetch_result.py  fetch_result.sh  for_each.sh  for_each_cmd.py  for_each_cmd.sh  force_cleanup.sh  gen_cout.py  gen_flame_graph.sh  host  inet.conf  inet.conf.bac  local_bench.py  local_report.sh  local_run.py  local_run.sh  parce_pcm.py  pcie_bench.sh  pcie_run.sh  perf_bench.sh  (+25 more)
script-py/: exec.py  run-send.py  run-write.py
script.bac/: auto_run.sh  bench_mw.sh  host  kv.sh
src/: AbstractMessageConnection.cpp  Cache.cpp  ClockManager.cpp  Common.cpp  DSM.cpp  DSMKeeper.cpp  Debug.cpp  Directory.cpp  DirectoryConnection.cpp  HugePageAlloc.cpp  Keeper.cpp  RawMessageConnection.cpp  ReliableMessageConnection.cpp  ReliableReceiver.cpp  ReliableSender.cpp  ThreadConnection.cpp  Timer.cpp  Tracer.cpp  Tree.cpp  UnreliableMessageConnection.cpp  random.cpp
src/patronus/: Coro.cpp  Lease.cpp  Patronus.cpp  TimeSyncer.cpp  Type.cpp
src/rdma/: Batch.cpp  FlowSteering.cpp  Operation.cpp  Resource.cpp  StateTrans.cpp  Utility.cpp
test/: alloc.cpp  atomic_inbound.cpp  atomic_latency.cpp  bench_boost_queue.cpp  bench_chrono.cpp  bench_coro.cpp  bench_keeper_put_get_barrier.cpp  bench_mw.cpp  bench_mw_post_send.cpp  bench_mw_rw.cpp  bench_patronus_basic.cpp  bench_patronus_basic_lease_expire.cpp  bench_patronus_basic_single_thread.cpp  bench_pool.cpp  bench_rdtsc.cpp  bench_rmsg.cpp  benchmark.cpp  cache_test.cpp  concurrent_tree_test.cpp  correct_addr.cpp  correct_basic.cpp  correct_bench_manager.cpp  correct_block_allocator.cpp  correct_block_allocator.cpp.bac  correct_bucket_monitor.cpp  correct_cache.cpp  correct_coro.cpp  correct_coro2.cpp  correct_coro_rmsg.cpp  correct_cqueue_rdma.cpp  correct_cqueue_rdma_single_client.cpp  correct_ddl_manager.cpp  correct_keeper_put_get_barrier.cpp  correct_kv_rand.cpp  correct_launcher.cpp  correct_launcher_diamond.cpp  correct_list_rdma.cpp  correct_list_rdma_single_client.cpp  correct_lock_manager.cpp  correct_mw.cpp  (+67 more)
